--- a/src/Sannel.House.Base.Sensor.MQTT/Sannel.House.Base.Sensor.MQTT.csproj
+++ b/src/Sannel.House.Base.Sensor.MQTT/Sannel.House.Base.Sensor.MQTT.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+		<RootNamespace>Sannel.House.Base.Sensor</RootNamespace>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<AssemblyVersion>$(Major).$(Minor).$(Patch).$(BuildNumber)</AssemblyVersion>
 		<FileVersion>$(Major).$(Minor).$(Patch).$(BuildNumber)</FileVersion>
@@ -16,12 +17,19 @@
 		<Company>Sannel Software, L.L.C.</Company>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 	</PropertyGroup>
-
 	<ItemGroup>
 		<None Include="..\..\LICENSE">
 			<Pack>True</Pack>
 			<PackagePath></PackagePath>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Sannel.House.Base.MQTT" Version="0.1.492-beta" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Sannel.House.Base.Sensor\Sannel.House.Base.Sensor.csproj" />
 	</ItemGroup>
 
 </Project>
