--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,19 +6,20 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  sdk_version: 3.1.x
+  sdk_version: 5.0.x
   libary_project: src/Sannel.House.Base.Sensor/Sannel.House.Base.Sensor.csproj
   support_netstandard20: true
   support_netstandard21: true
   support_netcoreapp21: true
   support_netcoreapp31: true
+  support_net5_0: true
 
 steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
     version: '$(sdk_version)'
-    includePreviewVersions: false
+    includePreviewVersions: true
 - task: DotNetCoreCLI@2
   displayName: 'dotnet restore'
   inputs:
@@ -78,6 +79,15 @@ steps:
     arguments: '-o $(Build.StagingDirectory)/netcoreapp3.1 -f netcoreapp3.1'
     zipAfterPublish: false
   condition: and(succeeded(), eq(variables['support_netcoreapp31'], 'true'))
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet publish'
+  inputs:
+    command: publish
+    publishWebProjects: false
+    projects: $(libary_project)
+    arguments: '-o $(Build.StagingDirectory)/net5.0 -f net5.0'
+    zipAfterPublish: false
+  condition: and(succeeded(), eq(variables['support_net5_0'], 'true'))
 - task: DotNetCoreCLI@2
   displayName: 'dotnet test'
   inputs:
