--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,8 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  sdk_version: 5.0.x
-  libary_project: src/Sannel.House.Base.Sensor/Sannel.House.Base.Sensor.csproj
+  library_project: src/Sannel.House.Base.Sensor/Sannel.House.Base.Sensor.csproj
+  library_project2: src/Sannel.House.Base.Sensor.MQTT/Sannel.House.Base.Sensor.MQTT.csproj
   support_netstandard20: true
   support_netstandard21: true
   support_netcoreapp21: true
@@ -30,102 +30,15 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '$(sdk_version)'
+    version: '5.0.x'
     includePreviewVersions: true
   condition: eq(variables['support_net5_0'], 'true')
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet restore'
-  inputs:
-    command: custom
-    custom: restore
-    arguments: '--configfile .nuget/nuget.config'
-    feedsToUse: config
-    nugetConfigPath: .nuget/nuget.config
-#    externalFeedCredentials: 'Sannel Github Read'
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet build Release'
-  inputs:
-    command: 'build'
-    projects: 'src/**/*.csproj'
-    arguments: '-c Release'
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet build Debug'
-  inputs:
-    command: 'build'
-    projects: 'src/**/*.csproj'
-    arguments: '-c Debug'
-  condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet publish'
-  inputs:
-    command: 'publish'
-    publishWebProjects: false
-    projects: $(libary_project)
-    arguments: '-o $(Build.StagingDirectory)/netstandard2.0 -f netstandard2.0'
-    zipAfterPublish: false
-  condition: and(succeeded(), eq(variables['support_netstandard20'], 'true'))
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet publish'
-  inputs:
-    command: publish
-    publishWebProjects: false
-    projects: $(libary_project)
-    arguments: '-o $(Build.StagingDirectory)/netstandard2.1 -f netstandard2.1'
-    zipAfterPublish: false
-  condition: and(succeeded(), eq(variables['support_netstandard21'], 'true'))
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet publish'
-  inputs:
-    command: publish
-    publishWebProjects: false
-    projects: $(libary_project)
-    arguments: '-o $(Build.StagingDirectory)/netcoreapp2.1 -f netcoreapp2.1'
-    zipAfterPublish: false
-  condition: and(succeeded(), eq(variables['support_netcoreapp21'], 'true'))
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet publish'
-  inputs:
-    command: publish
-    publishWebProjects: false
-    projects: $(libary_project)
-    arguments: '-o $(Build.StagingDirectory)/netcoreapp3.1 -f netcoreapp3.1'
-    zipAfterPublish: false
-  condition: and(succeeded(), eq(variables['support_netcoreapp31'], 'true'))
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet publish'
-  inputs:
-    command: publish
-    publishWebProjects: false
-    projects: $(libary_project)
-    arguments: '-o $(Build.StagingDirectory)/net5.0 -f net5.0'
-    zipAfterPublish: false
-  condition: and(succeeded(), eq(variables['support_net5_0'], 'true'))
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet test'
-  inputs:
-    projects: '**/*Tests.csproj'
-    command: test
-    arguments: '--collect "Code coverage"'
-    publishTestResults: true
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet pack Release'
-  inputs:
-    command: 'pack'
-    feedsToUse: 'select'
-    packagesToPack: '$(libary_project)'
-    configuration: 'Release'
-    versioningScheme: 'off'
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet pack Debug'
-  inputs:
-    command: 'pack'
-    feedsToUse: 'select'
-    packagesToPack: '$(libary_project)'
-    configuration: 'Debug'
-    versioningScheme: 'off'
-  condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
+- template: build/tasks/build.yaml
+  parameters:
+    library_project: $library_project
+- template: build/tasks/build.yaml
+  parameters:
+    library_project: $library_project2
 - task: PublishPipelineArtifact@0
   displayName: 'Publish Pipeline Artifact'
   inputs:
