--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -120,9 +120,7 @@ steps:
   inputs:
     command: 'pack'
     feedsToUse: 'select'
-    packagesToPack: |
-      src/**/*.csproj
-      !src/**/*Tests.csproj
+    packagesToPack: src/**/*.csproj
     configuration: 'Release'
     versioningScheme: 'off'
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
@@ -131,9 +129,7 @@ steps:
   inputs:
     command: 'pack'
     feedsToUse: 'select'
-    packagesToPack: |
-      src/**/*.csproj
-      !src/**/*Tests.csproj
+    packagesToPack: src/**/*.csproj
     configuration: 'Debug'
     versioningScheme: 'off'
   condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/master'))
