--- a/src/Sannel.House.Base.Sensor.Tests/Sannel.House.Base.Sensor.Tests.csproj
+++ b/src/Sannel.House.Base.Sensor.Tests/Sannel.House.Base.Sensor.Tests.csproj
@@ -6,6 +6,12 @@
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1' 
+				Or '$(TargetFramework)' == 'netcoreapp3.1' 
+				Or '$(TargetFramework)' == 'net5.0'">
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Moq" Version="4.14.5" />
 		<PackageReference Include="xunit" Version="2.4.1" />
