--- a/src/Sannel.House.Base.Sensor.MQTT/Sannel.House.Base.Sensor.MQTT.csproj
+++ b/src/Sannel.House.Base.Sensor.MQTT/Sannel.House.Base.Sensor.MQTT.csproj
@@ -4,23 +4,10 @@
 		<TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
 		<RootNamespace>Sannel.House.Base.Sensor</RootNamespace>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<AssemblyVersion>$(Major).$(Minor).$(Patch).$(BuildNumber)</AssemblyVersion>
-		<FileVersion>$(Major).$(Minor).$(Patch).$(BuildNumber)</FileVersion>
-		<Version Condition="'$(Configuration)' != 'Release'">$(Major).$(Minor).$(Patch)-beta</Version>
-		<Version Condition="'$(Configuration)' == 'Release'">$(Major).$(Minor).$(Patch)</Version>
-		<Authors>Adam Holt</Authors>
 		<Description>Interfaces for common sensors.</Description>
-		<PackageLicenseUrl></PackageLicenseUrl>
-		<PackageProjectUrl>https://github.com/Sannel/Sannel.House.Base.Sensor</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/Sannel/Sannel.House.Base.Sensor</RepositoryUrl>
-		<PackageReleaseNotes></PackageReleaseNotes>
-		<Company>Sannel Software, L.L.C.</Company>
-		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1' 
-				Or '$(TargetFramework)' == 'netcoreapp3.1' 
-				Or '$(TargetFramework)' == 'net5.0'">
+	<PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1' Or '$(TargetFramework)' == 'netcoreapp3.1' Or '$(TargetFramework)' == 'net5.0'">
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
@@ -38,7 +25,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Sannel.House.Base.MQTT" Version="0.1.548-beta" />
+		<PackageReference Include="Sannel.House.Base.MQTT" Version="0.9.0-beta.*" />
 	</ItemGroup>
 
 	<ItemGroup>
